--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module-Tetris</title>
+    <!-- Add the favicon link here -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Module-Tetris</h1>
     <button id="clear-button">Zurücksetzen</button>
     <div id="info-message"></div>
-    <div id="error-message" ></div>
+    <div id="error-message"></div>
 
-
-    <div id="freie-wahl" class="electives-container "></div>
+    <div id="freie-wahl" class="electives-container"></div>
     <div id="freie-wahl-container">
         <input type="text" id="freie-wahl-name" placeholder="Name des Kurses">
         <input type="number" id="freie-wahl-credits" placeholder="LP" min="1" step="1" max="30">
@@ -28,7 +29,7 @@
         <option value="winter">Winter Module</option>
     </select>
 
-    <div id="electives" class="electives-container "></div>
+    <div id="electives" class="electives-container"></div>
     <div id="semesters" class="semester-container"></div>
 
     <!-- The Overlay -->
@@ -41,8 +42,6 @@
         </div>
     </div>
 
-    
-
-<script type="module" src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
