rm unnecessary files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Module-Tetris</h1>
-    <button id="clear-button">Zurücksetzen</button>
+    <p>Mit Drag & Drop kannst du Module bewegen und dein Modul-Tetris bauen. Klicke auf ein Modul, um mehr Informationen zu erhalten.</p>    <button id="clear-button">Zurücksetzen</button>
     <div id="info-message"></div>
     <div id="error-message"></div>
 
