abkürzungen für freie wahl kurse

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <h2>Freie Wahl</h2>
             <p id="hilfe-freie-wahl" class="help-p" style="display: none;">Füge hier deine Kurse für den Freien Wahlbereich hinzu. Jeder Kurs benötigt einen Namen und eine Anzahl an Leistungspunkten.</p>  
             <div id="freie-wahl-container">
+                <input type="text" id="freie-wahl-short-name" placeholder="Abkürzung" style="width: 9ch;">
                 <input type="text" id="freie-wahl-name" placeholder="Name des Kurses">
                 <input type="number" id="freie-wahl-credits" placeholder="LP" min="1" step="1" max="30">
                 <button id="add-freie-wahl">Kurs hinzufügen</button>
