--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <header>
-        <h1>Module-Tetris</h1>
+        <div id="titel">
+            <h1>Module-Tetris</h1>
+            <a href="https://www.inf.uni-hamburg.de/studies/bachelor/inf.html#uhh-tabs-0_tab-1" target="_blank" rel="noopener noreferrer">Info-Seite der Uni</a>
+        </div>
         <div id="info-msg-container">
             <div id="info-total">Gesamt: x von x LP</div>
             <div id="info-wahlpflicht">Wahlpflicht: x von x LP</div>
@@ -55,11 +58,16 @@
 
             <h2>Optionen</h2>
             <p id="hilfe-optionen" class="help-p" style="display: none;">Speichere deinen Plan als Datei und sende ihn an Freunde, oder lade eine gespeicherte Datei, um den Plan wiederherzustellen.</p>            <div class="options-container">
-                <button id="help-button">Help</button>
+                <button id="help-button">Hilfe anzeigen</button>
                 <button id="clear-button">Zurücksetzen</button>
                 <button id="downloadPdfButton">Als PDF speichern</button>
                 <button id="downloadJSONButton">Als Datei speichern</button>  
                 <button id="loadJSONButton">Aus Datei laden</button>  
+                <button id="loadExampleButton">Beispiel laden</button>  
+                <!-- <select id="selectYearButton">
+                    <option value="19">Studienstart 2019-2022</option>
+                    <option value="23">Studienstart ab 2023</option>
+                </select> -->
             </div>
         </div>
     </div>
