--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div id="titel">
             <h1>Module-Tetris</h1>
             <a href="https://www.inf.uni-hamburg.de/studies/bachelor/inf.html#uhh-tabs-0_tab-1" target="_blank" rel="noopener noreferrer">Info-Seite der Uni</a>
+             / 
+            <a href="https://github.com/hahnfabian/tetris" target="_blank" rel="noopener noreferrer">Github</a>
         </div>
         <div id="info-msg-container">
             <div id="info-total">Gesamt: x von x LP</div>
