--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="left-column">
             <h2>Dein Plan</h2>
             <p id="average-display" class="average-display">Durchschnitt: 0.00</p>
-            <p id="hilfe-plan" class="help-p" style="display: none;">Das ist dein Semesterplan. Mit der Drag-and-Drop-Funktion kannst du Module verschieben.</p>            
+            <p id="hilfe-plan" class="help-p" style="display: none;">Das ist dein Semesterplan. Mit der Drag-and-Drop-Funktion kannst du Module verschieben. Klick auf ein Modul für mehr Optionen.</p>            
             <div id="semesters" class="semester-container"></div>
         </div>
         <div class="right-column">
