freie wahl bearbeiten und duplizieren

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <button id="downloadJSONButton">Als Datei speichern</button>  
                 <button id="loadJSONButton">Aus Datei laden</button>  
                 <button id="loadExampleButton">Beispiel laden</button>  
+                <button id="toggleGradesButton" class="options-btn">Noten verstecken</button>
                 <!-- <select id="selectYearButton">
                     <option value="19">Studienstart 2019-2022</option>
                     <option value="23">Studienstart ab 2023</option>
