add Notenübersicht overlay

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <button id="loadJSONButton">Aus Datei laden</button>  
                 <button id="loadExampleButton">Beispiel laden</button>  
                 <button id="toggleGradesButton" class="options-btn">Noten verstecken</button>
+                <button id="showGradesList">Notenübersicht anzeigen</button>
                 <!-- <select id="selectYearButton">
                     <option value="19">Studienstart 2019-2022</option>
                     <option value="23">Studienstart ab 2023</option>
